Clear screen with OpenGL

--- a/source/quadwar/CMakeLists.txt
+++ b/source/quadwar/CMakeLists.txt
@@ -1,5 +1,7 @@
 target_sources(
   ${QUADWAR}
     PRIVATE
-      main.c)
+      main.c
+    PUBLIC
+      $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/options.h>)
 add_subdirectory(gl)
