--- a/source/quadwar/CMakeLists.txt
+++ b/source/quadwar/CMakeLists.txt
@@ -1,8 +1,9 @@
 target_sources(
   ${QUADWAR}
     PRIVATE
-      main.c stem.c
+      input.c main.c stem.c
     PUBLIC
       $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/stem.h>
+      $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/input.h>
       $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/options.h>)
 add_subdirectory(gl)
