--- a/source/quadwar/CMakeLists.txt
+++ b/source/quadwar/CMakeLists.txt
@@ -5,5 +5,6 @@ target_sources(
     PUBLIC
       $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/stem.h>
       $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/input.h>
+      $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/math.h>
       $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/options.h>)
 add_subdirectory(gl)
