--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Setup OpenGL
-        uses: openrndr/setup-opengl@v1.1
-
+        if: runner.os == 'Linux'
+        shell: bash
+        run: |
+          sudo apt install libgl1-mesa-dev
+        
       - name: Build
         shell: bash
         run: |
