Add OpenGL ES3 header files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ env:
   BUILD_TYPE: Debug
 
 jobs:
-  build:
+  build-native:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-2019, macos-latest ]
