--- a/source/quadwar/CMakeLists.txt
+++ b/source/quadwar/CMakeLists.txt
@@ -7,3 +7,4 @@ target_sources(
       $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/input.h>
       $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/math.h>
       $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/options.h>)
+add_subdirectory(gl)
