--- a/source/quadwar/CMakeLists.txt
+++ b/source/quadwar/CMakeLists.txt
@@ -1,9 +1,10 @@
 target_sources(
   quadwar
     PRIVATE
-      input.c main.c stem.c
+      input.c main.c camera.c stem.c
     PUBLIC
       $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/stem.h>
+      $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/camera.h>
       $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/input.h>
       $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/math.h>
       $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/options.h>)
