--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,7 @@ else()
     FetchContent_Declare(
       SDL2
       GIT_REPOSITORY https://github.com/libsdl-org/SDL.git
-      GIT_TAG SDL2)
+      GIT_TAG release-2.26.4)
     set(SDL_TEST OFF CACHE BOOL "" FORCE)
     set(SDL_STATIC ON CACHE BOOL "" FORCE)
     set(SDL_SHARED OFF CACHE BOOL "" FORCE)
